# tweets_clone

./: README.md  db.sqlite3  pyproject.toml
common/: models.py
config/: authentication.py  settings.py  urls.py
tweets/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
tweets/migrations/: 0001_initial.py
tweets/templates/: tweet.html
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
